--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-settings-solydxk (4.6+r13) stable; urgency=low
+
+  * Do not show "Boot partition not encrypted" warning
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Fri, 23 Jun 2023 15:24:07 +0200
+
 calamares-settings-solydxk (4.5+r13) stable; urgency=low
 
   * Disable xfce4-power-manager on startup
