--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-settings-solydxk (4.7+r13) stable; urgency=low
+
+  * Convert key to argon2id after converting luks1 to luks2
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Tue, 27 Jun 2023 17:22:48 +0200
+
 calamares-settings-solydxk (4.6+r13) stable; urgency=low
 
   * Do not show "Boot partition not encrypted" warning
