--- a/po/fr.po
+++ b/po/fr.po
@@ -2,32 +2,36 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
+# Translators:
+# ilu lu, 2023
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 18:59+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2022-04-18 11:15+0200\n"
+"PO-Revision-Date: 2020-11-08 10:33+0000\n"
+"Last-Translator: ilu lu, 2023\n"
+"Language-Team: French (https://app.transifex.com/abalfoort/teams/54212/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: fr\n"
+"Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
 #: calamares-modules/luksboot-fix/main.py:28
 msgid "Calamares will continue despite this error."
-msgstr ""
+msgstr "Calamares continuera malgré cette erreur."
 
 #: calamares-modules/luksboot-fix/main.py:30
 msgid "Error"
-msgstr ""
+msgstr "Erreur"
 
 #: calamares-modules/luksboot-fix/main.py:46
 msgid "Passphrase"
-msgstr ""
+msgstr "Phrase d'authentification"
 
 #: calamares-modules/luksboot-fix/main.py:50
 msgid ""
@@ -35,33 +39,39 @@ msgid ""
 "{!s}.\n"
 "Please, provide an existing passphrase to unlock."
 msgstr ""
+"La partition précédemment chiffrée a été trouvée :\n"
+"{!s}.\n"
+"Veuillez fournir une phrase d'authentification existante pour déverrouiller."
 
 #: calamares-modules/luksboot-fix/main.py:99
 msgid "Unable to create {!s}: {!s}"
-msgstr ""
+msgstr "Impossible de créer {!s}: {!s}"
 
 #: calamares-modules/luksboot-fix/main.py:148
 msgid "Unable to add key for {!s} in {!s}: {!s} - {!s}"
 msgstr ""
+"Impossible d'ajouter une clé de chiffrement pour {!s} in {!s}: {!s} - {!s}"
 
-#: calamares-modules/luksboot-fix/main.py:313
+#: calamares-modules/luksboot-fix/main.py:310
 msgid ""
 "Unable to determine the file system type of {!s}.\n"
 "You need to configure this device manually."
 msgstr ""
+"Impossible de déterminer le type de système de fichiers de {!s}.\n"
+"Vous devez configurer ce périphérique manuellement."
 
-#: conf/install-solydxk.desktop.in.h:1 conf/install-solydxk.desktop.in.h:1
+#: conf/install-solydxk.desktop.in.h:1
 msgid "Install SolydXK"
-msgstr ""
+msgstr "Installer SolydXK"
 
-#: conf/install-solydxk.desktop.in.h:2 conf/install-solydxk.desktop.in.h:2
+#: conf/install-solydxk.desktop.in.h:2
 msgid "Calamares Installer"
-msgstr ""
+msgstr "Calamares Installateur"
 
-#: conf/install-solydxk.desktop.in.h:3 conf/install-solydxk.desktop.in.h:3
+#: conf/install-solydxk.desktop.in.h:3
 msgid "Calamares - Installer for SolydXK Live"
-msgstr ""
+msgstr "Calamares - Installateur pour SolydXK Live"
 
-#: conf/install-solydxk.desktop.in.h:4 conf/install-solydxk.desktop.in.h:4
+#: conf/install-solydxk.desktop.in.h:4
 msgid "calamares;system;install;solydxk;installer"
-msgstr ""
+msgstr "calamares;système;installer;solydxk;installateur"
