--- a/po/ru.po
+++ b/po/ru.po
@@ -4,7 +4,6 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Franco Frolloni <franco@frolloni.eu>, 2021
 # ilu lu, 2023
 # 
 #, fuzzy
@@ -15,24 +14,24 @@ msgstr ""
 "POT-Creation-Date: 2022-04-18 11:15+0200\n"
 "PO-Revision-Date: 2020-11-08 10:33+0000\n"
 "Last-Translator: ilu lu, 2023\n"
-"Language-Team: Italian (https://app.transifex.com/abalfoort/teams/54212/it/)\n"
+"Language-Team: Russian (https://app.transifex.com/abalfoort/teams/54212/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: it\n"
-"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
+"Language: ru\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 #: calamares-modules/luksboot-fix/main.py:28
 msgid "Calamares will continue despite this error."
-msgstr "Calamares continuerà nonostante l'errore."
+msgstr "Calamares будет продолжать, несмотря на эту ошибку."
 
 #: calamares-modules/luksboot-fix/main.py:30
 msgid "Error"
-msgstr "Errore"
+msgstr "Ошибка"
 
 #: calamares-modules/luksboot-fix/main.py:46
 msgid "Passphrase"
-msgstr "Passphrase"
+msgstr "Пассфраза"
 
 #: calamares-modules/luksboot-fix/main.py:50
 msgid ""
@@ -40,40 +39,38 @@ msgid ""
 "{!s}.\n"
 "Please, provide an existing passphrase to unlock."
 msgstr ""
-"Trovata una partizione precedentemente crittografata:\n"
+"Найден ранее зашифрованный раздел:\n"
 "{!s}.\n"
-"Fornire una passphrase esistente per sbloccare."
+"Укажите существующую кодовую фразу для разблокировки."
 
 #: calamares-modules/luksboot-fix/main.py:99
 msgid "Unable to create {!s}: {!s}"
-msgstr "Impossibile creare {!s}: {!s}"
+msgstr "Не удается создать {!s}: {!s}"
 
 #: calamares-modules/luksboot-fix/main.py:148
 msgid "Unable to add key for {!s} in {!s}: {!s} - {!s}"
-msgstr ""
-"Impossibile aggiungere la chiave di crittografia per {!s} in {!s}: {!s} - "
-"{!s}"
+msgstr "Не удается добавить ключ шифрования для {!s} в {!s}: {!s} - {!s}"
 
 #: calamares-modules/luksboot-fix/main.py:310
 msgid ""
 "Unable to determine the file system type of {!s}.\n"
 "You need to configure this device manually."
 msgstr ""
-"Impossibile determinare il tipo di filesystem di {!s}.\n"
-"È necessario configurare manualmente questo dispositivo."
+"Невозможно определить тип файловой системы {!s}.\n"
+"Необходимо сконфигурировать это устройство вручную."
 
 #: conf/install-solydxk.desktop.in.h:1
 msgid "Install SolydXK"
-msgstr "Installare SolydXK"
+msgstr "Установить SolydXK"
 
 #: conf/install-solydxk.desktop.in.h:2
 msgid "Calamares Installer"
-msgstr "Installatore Calamares"
+msgstr "Calamares Инсталлятор"
 
 #: conf/install-solydxk.desktop.in.h:3
 msgid "Calamares - Installer for SolydXK Live"
-msgstr "Calamares - Installatore per SolydXK Live"
+msgstr "Calamares - Инсталлятор для SolydXK Live"
 
 #: conf/install-solydxk.desktop.in.h:4
 msgid "calamares;system;install;solydxk;installer"
-msgstr "calamares;sistema;installazione;solydxk;installatore"
+msgstr "calamares;система;установка;solydxk;инсталлятор"
