--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-settings-solydxk (4.9+r13) stable; urgency=low
+
+  * Remove line about community funding
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Mon, 24 Jul 2023 06:52:19 +0200
+
 calamares-settings-solydxk (4.8+r13) stable; urgency=low
 
   * Updated translations: nl, ru, it, fr, da, nb
