--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-settings-solydxk (4.12+r13) stable; urgency=low
+
+  * Remove /usr/sbin/remove-deborphan
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Thu, 02 May 2024 15:14:42 +0200
+
 calamares-settings-solydxk (4.11+r13) stable; urgency=low
 
   * Fix not placing installer shortcut on desktop with foreign languages
