--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+calamares-settings-solydxk (4.14+r13) stable; urgency=low
+
+  * Revert live user password when uninstalling
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Mon, 27 Jan 2025 19:37:26 +0100
+
+calamares-settings-solydxk (4.13+r13) stable; urgency=low
+
+  * Updated conf files
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Tue, 14 Jan 2025 13:37:57 +0100
+
 calamares-settings-solydxk (4.12+r13) stable; urgency=low
 
   * Remove /usr/sbin/remove-deborphan
