--- a/po/pt.po
+++ b/po/pt.po
@@ -4,8 +4,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Arjen Balfoort <arjenbalfoort@hotmail.com>, 2022
-# Luis Filipe Teixeira <lufilte@gmail.com>, 2022
+# Luis Filipe Teixeira <lufilte@gmail.com>, 2025
 # 
 #, fuzzy
 msgid ""
@@ -14,8 +13,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-04-18 11:15+0200\n"
 "PO-Revision-Date: 2020-11-08 10:33+0000\n"
-"Last-Translator: Luis Filipe Teixeira <lufilte@gmail.com>, 2022\n"
-"Language-Team: Portuguese (https://www.transifex.com/abalfoort/teams/54212/pt/)\n"
+"Last-Translator: Luis Filipe Teixeira <lufilte@gmail.com>, 2025\n"
+"Language-Team: Portuguese (https://app.transifex.com/abalfoort/teams/54212/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -24,7 +23,7 @@ msgstr ""
 
 #: calamares-modules/luksboot-fix/main.py:28
 msgid "Calamares will continue despite this error."
-msgstr "Calamares continuará apesar deste erro."
+msgstr "Apesar deste erro, Calamares vai continuar."
 
 #: calamares-modules/luksboot-fix/main.py:30
 msgid "Error"
@@ -40,29 +39,29 @@ msgid ""
 "{!s}.\n"
 "Please, provide an existing passphrase to unlock."
 msgstr ""
-"Partição previamente cifrada encontrada:\n"
+"Partição anteriormente cifrada encontrada:\n"
 "{!s}.\n"
-"Por favor, forneça a frase-senha existente para desbloquear."
+"Por favor, forneça uma frase-passe existente para desbloquear."
 
 #: calamares-modules/luksboot-fix/main.py:99
 msgid "Unable to create {!s}: {!s}"
-msgstr "Incapaz de criar {!s}: {!s}"
+msgstr "Não foi possível criar {!s}: {!s}"
 
 #: calamares-modules/luksboot-fix/main.py:148
 msgid "Unable to add key for {!s} in {!s}: {!s} - {!s}"
-msgstr "Incapaz de adicionar chave para {!s} em {!s}: {!s} - {!s}"
+msgstr "Não é possível adicionar a chave para {!s} em {!s}: {!s} - {!s}"
 
 #: calamares-modules/luksboot-fix/main.py:310
 msgid ""
 "Unable to determine the file system type of {!s}.\n"
 "You need to configure this device manually."
 msgstr ""
-"Não é possível determinar o tipo de sistema de ficheiros de {!s}.\n"
-"Necessita de configurar este dispositivo manualmente."
+"Não foi possível determinar o tipo de sistema de ficheiros de {!s}.\n"
+"É necessário configurar este dispositivo manualmente."
 
 #: conf/install-solydxk.desktop.in.h:1
 msgid "Install SolydXK"
-msgstr "Instalar SolydXK"
+msgstr "Instalar o SolydXK"
 
 #: conf/install-solydxk.desktop.in.h:2
 msgid "Calamares Installer"
@@ -70,8 +69,8 @@ msgstr "Instalador Calamares"
 
 #: conf/install-solydxk.desktop.in.h:3
 msgid "Calamares - Installer for SolydXK Live"
-msgstr "Calamares - Instalador para SolydXK Live"
+msgstr "Calamares - Instalador do SolydXK Live"
 
 #: conf/install-solydxk.desktop.in.h:4
 msgid "calamares;system;install;solydxk;installer"
-msgstr "calamares;sistema;instalar;solydxk;instalador"
+msgstr "calamares;system;install;solydxk;installer"
