--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+calamares-settings-solydxk (4.18+r13) stable; urgency=low
+
+  * Script April 1 desktop change
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sun, 30 Mar 2025 19:51:02 +0200
+
+calamares-settings-solydxk (4.17+r13) stable; urgency=low
+
+  * Setup Qemu Hostshare if available
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Wed, 12 Mar 2025 15:59:55 +0100
+
 calamares-settings-solydxk (4.16+r13) stable; urgency=low
 
   * sources-media: implement deb822
